--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -1,6 +1,6 @@
 {
   "dashboard": {
-    "WELCOME": "Welcome to Angle!"
+    "WELCOME": "Welcome to E-SMS"
   },
   "sidebar": {
     "WELCOME": "Welcome",
@@ -13,63 +13,9 @@
       "DASHBOARD": "Dashboard",
       "WIDGETS": "Widgets",
       "DOCUMENTATION": "Documentation",
-      "element": {
-        "ELEMENTS": "Elements",
-        "BUTTON": "Button",
-        "COLOR": "Colors",
-        "NOTIFICATION": "Notification",
-        "CAROUSEL": "Carousel",
-        "SPINNER": "Spinner",
-        "ANIMATION": "Animation",
-        "DROPDOWN": "Dropdown",
-        "CARD": "Cards",
-        "PORTLET": "Portlet",
-        "GRID": "Grid",
-        "GRID_MASONRY": "Grid Masonry",
-        "TYPO": "Typography",
-        "FONT_ICON": "Font Icons",
-        "WEATHER_ICON": "Weather Icons"
-      },
-      "form": {
-        "FORM": "Forms",
-        "STANDARD": "Standard",
-        "EXTENDED": "Extended",
-        "VALIDATION": "Validation"
-      },
-      "chart": {
-        "CHART": "Charts",
-        "FLOT": "Flot",
-        "RADIAL": "Radial"
-      },
-      "table": {
-        "TABLE": "Table",
-        "STANDARD": "Standard",
-        "EXTENDED": "Extended",
-        "DATATABLE": "Datatable"
-      },
-      "map": {
-        "MAP": "Maps",
-        "GOOGLE": "Google Map",
-        "VECTOR": "Vector Map"
-      },
-      "extra": {
-        "EXTRA": "Extras",
-        "MAILBOX": "Mailbox",
-        "TIMELINE": "Timeline",
-        "CALENDAR": "Calendar",
-        "INVOICE": "Invoice",
-        "SEARCH": "Search",
-        "TODO": "Todo List",
-        "PROFILE": "Profile"
-      },
-      "pages": {
-        "PAGES": "Pages",
-        "LOGIN": "Login",
-        "REGISTER": "Register",
-        "RECOVER": "Recover password",
-        "PROFILE": "Profile",
-        "LOCK": "Lock",
-        "STARTER": "Starter Template"
+      "setting": {
+        "SETTINGS": "Settings",
+        "OPERATORS": "Operators"
       }
     }
   }
