--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -16,7 +16,8 @@
       "setting": {
         "SETTINGS": "Settings",
         "OPERATORS": "Operators"
-      }
+      },
+      "SMS": "SMS"
     }
   }
 }
